# demo-libraries-multiple

./: CMakeLists.txt  README.md
bar_library/: CMakeLists.txt  bar_library.cpp  bar_library.h  bar_support.h
demo_binary/: CMakeLists.txt  demo.cpp
foo_library/: CMakeLists.txt  foo_support.h
library_support/: CMakeLists.txt  library_support.h
